--- a/style.css
+++ b/style.css
@@ -41,11 +41,26 @@ body {
 
 .overlay {
     position: fixed;
+    right: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url('TestImg.jpg');
+    background-position: top center; background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    filter: contrast(0.9);
+}
+
+.overlay2 {
+    position: fixed;
+    right: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
     background: linear-gradient(to right, red, white);
     background-size: cover;
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 /*
