--- a/style.css
+++ b/style.css
@@ -10,31 +10,18 @@
 
 @media screen and (max-width: 700px) {
     h1 {font-size: 40px !important;
-       padding-top: 80px !important;
+       padding-top: 110px !important;
        margin-bottom: 60px !important;}
-    .P {
-        font-size: 18px !important;
-    }
+    .P {font-size: 18px !important;}
     .container {padding-top: 40px !important;
                 padding-bottom: 100px !important;}
     .banks {padding-bottom: 10px !important;}
 }
 
-body::before {    
-    content: "";
-    position: fixed;
-    right: 0px;
-    left: 0px;
+body {
+    position: relative;
     width: 100%;
     height: 100%;
-    background-image: url('TestImg.jpg');
-    background-position: top center; background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    filter: grayscale(1);
-}
-
-body {
     overflow-x: hidden;
     font-family: "BPG";
 }
@@ -96,6 +83,7 @@ h1 {
     text-align: center;
     font-size: 22px;
     padding: 8%;
+    margin-top: 15px;
     font-weight: bold;
     letter-spacing: 1px;
     line-height: 2.2em;
