--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
 
 .overlay {
     position: fixed;
-    right: 0px;
     left: 0px;
+    right: 0px;
     width: 100%;
     height: 100%;
     background-image: url('TestImg.jpg');
@@ -41,8 +41,8 @@ body {
 
 .overlay2 {
     position: fixed;
-    right: 0px;
     left: 0px;
+    right: 0px;
     width: 100%;
     height: 100%;
     background: linear-gradient(to right, red, white);
@@ -83,6 +83,8 @@ h1 {
     text-align: center;
     font-size: 22px;
     padding: 8%;
+    padding-left: 10%;
+    padding-right: 10%;
     margin-top: 15px;
     font-weight: bold;
     letter-spacing: 1px;
