--- a/style.css
+++ b/style.css
@@ -9,13 +9,23 @@
 }
 
 @media screen and (max-width: 700px) {
-    h1 {font-size: 40px !important;
+    h1 {
+       font-size: 40px !important;
        padding-top: 110px !important;
-       margin-bottom: 60px !important;}
-    .P {font-size: 18px !important;}
-    .container {padding-top: 40px !important;
-                padding-bottom: 100px !important;}
-    .banks {padding-bottom: 10px !important;}
+       margin-bottom: 60px !important;
+    }
+    .P {
+        font-size: 18px !important;
+        padding-left: 5% !important;
+        padding-right: 5% !important;
+    }
+    .container {
+        padding-top: 40px !important;
+        padding-bottom: 100px !important;
+    }
+    .banks {
+        padding-bottom: 10px !important;
+    }
 }
 
 body {
